Sharding should log ignored deletions at higher log level

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Trivial - P5
    • 3.2.0-rc2
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding C (11/20/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This code in the migration destination manager would delete migrated deletion operations if they do not belong to the chunk which is currently being migrated. This happens in order to avoid propagating deletions to chunks which are still in the process of being cleaned up from the last move chunk round.

      We shouldn't be logging these at a default log level.

            Assignee:
            Randolph Tan
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: