SERVER-21034 Sharding should log ignored deletions at higher log level